# ObjectiveNinja

./: .gitignore  .gitmodules  BinaryNinja.h  CMakeLists.txt  CONTRIBUTING.md  Commands.cpp  Commands.h  CustomTypes.cpp  CustomTypes.h  DataRenderers.cpp  DataRenderers.h  GlobalState.h  InfoHandler.cpp  InfoHandler.h  LICENSE.txt  Performance.h  Plugin.cpp  README.md  Workflow.cpp  Workflow.h
Core/: ABI.cpp  AbstractFile.cpp  AbstractFile.h  AnalysisInfo.cpp  AnalysisInfo.h  AnalysisProvider.cpp  Analyzer.cpp  BinaryViewFile.cpp  BinaryViewFile.h  TypeParser.cpp
Core/Analyzers/: CFStringAnalyzer.cpp  CFStringAnalyzer.h  CategoryAnalyzer.cpp  ClassAnalyzer.cpp  ClassAnalyzer.h  SelectorAnalyzer.cpp  SelectorAnalyzer.h
Core/Support/: BinaryViewFile.cpp
Include/ObjectiveNinjaCore/: ABI.h  AbstractFile.h  AnalysisInfo.h  AnalysisProvider.h  Analyzer.h  TypeParser.h
Include/ObjectiveNinjaCore/Analyzers/: CFStringAnalyzer.h  CategoryAnalyzer.h  ClassAnalyzer.h  SelectorAnalyzer.h
Include/ObjectiveNinjaCore/Support/: BinaryViewFile.h
Plugin/: AnalysisRecords.hpp  BuildInfo.h.in  Commands.cpp  CustomTypes.cpp  CustomTypes.h  CustomTypes.hpp  DataRenderers.cpp  DataRenderers.h  DataRenderers.hpp  GlobalState.cpp  GlobalState.h  GlobalState.hpp  InfoHandler.cpp  InfoHandler.h  OneShot.cpp  OneShot.hpp  Plugin.cpp  StructureAnalyzer.cpp  Workflow.cpp
Plugin/Support/: BinaryViewFile.cpp  BinaryViewFile.h
Plugin/Workflow/: Workflow.cpp  Workflow.h
TestSuite/: DumpInfo.cpp  README.md  Run.sh
TestSuite/Binaries/: AuthenticationServicesUI-iOS-14-arm64  Calculator-macOS-12-arm64e  Calculator-macOS-12-x86_64  Console-macOS-12-x86_64  FieldTest-iOS-14-arm64
TestSuite/Oracle/: AuthenticationServicesUI-iOS-14-arm64.json  Calculator-macOS-12-arm64e.json  Calculator-macOS-12-x86_64.json  Console-macOS-12-arm64e.json  Console-macOS-12-x86_64.json  ExternalAccessory-iOS-14-arm64.json  FieldTest-iOS-14-arm64.json
Tools/: DumpInfo.cpp
source/: AnalysisRecords.hpp  CustomTypes.cpp  CustomTypes.hpp  DataRenderers.cpp  DataRenderers.hpp  GlobalState.cpp  GlobalState.hpp  OneShot.cpp  OneShot.hpp  Plugin.cpp  StructureAnalyzer.cpp  StructureAnalyzer.hpp  Workflow.cpp  Workflow.hpp
